--- a/algebra/picture.html
+++ b/algebra/picture.html
@@ -41,6 +41,7 @@
           <li class="level2 nav-leaf"><a href="../pictures/layout.html">Layout</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/style.html">Style</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
+          <li class="level2 nav-leaf"><a href="../pictures/size.html">Size</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
           <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
@@ -111,7 +112,7 @@
             
             <h2 id="type-class-instances-for-picture" class="section">Type Class Instances for Picture</h2>
             <p>There some type class instances defined for <code>Picture</code>.</p>
-            <p><code>Picture[Alg,*]</code> always has an <code>Applicative</code> instance.</p>
+            <p><code>Picture[Alg,*]</code> always has an <code>Monad</code> instance.</p>
             <p><code>Picture[Alg,*]</code> has a <code>Monoid</code> instance if:</p>
             <ul>
               <li>the algebra has <code>Layout</code> and <code>Shape</code>; and</li>
