--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <li class="level2 nav-leaf"><a href="pictures/layout.html">Layout</a></li>
           <li class="level2 nav-leaf"><a href="pictures/style.html">Style</a></li>
           <li class="level2 nav-leaf"><a href="pictures/transform.html">Transforms</a></li>
+          <li class="level2 nav-leaf"><a href="pictures/size.html">Size</a></li>
           <li class="level2 nav-leaf"><a href="pictures/drawing.html">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="pictures/writing.html">Writing to a File</a></li>
           <li class="level1 nav-leaf"><a href="core/">Core</a></li>
