--- a/pictures/path.html
+++ b/pictures/path.html
@@ -41,6 +41,7 @@
           <li class="level2 nav-leaf"><a href="layout.html">Layout</a></li>
           <li class="level2 nav-leaf"><a href="style.html">Style</a></li>
           <li class="level2 nav-leaf"><a href="transform.html">Transforms</a></li>
+          <li class="level2 nav-leaf"><a href="size.html">Size</a></li>
           <li class="level2 nav-leaf"><a href="drawing.html">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="writing.html">Writing to a File</a></li>
           <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
