--- a/canvas/examples.html
+++ b/canvas/examples.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
                     <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="loading-images.html">Loading Images</a></li>
                     <li class="level3 nav-leaf"><a href="to-picture.html">Loading Images</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
@@ -154,6 +155,7 @@
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
             <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
+            <li class="level3 nav-leaf"><a href="loading-images.html">Loading Images</a></li>
             <li class="level3 nav-leaf"><a href="to-picture.html">Loading Images</a></li>
             <li class="level3 active nav-leaf"><a href="#">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
