--- a/canvas/to-picture.html
+++ b/canvas/to-picture.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
                     <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="loading-images.html">Loading Images</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Loading Images</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
@@ -154,6 +155,7 @@
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
             <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
+            <li class="level3 nav-leaf"><a href="loading-images.html">Loading Images</a></li>
             <li class="level3 active nav-leaf"><a href="#">Loading Images</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
@@ -187,7 +189,7 @@
 <div class="doodle" id="to-html-image-picture"></div>
 <script>CanvasToPictureExamples.toHtmlImagePicture("to-html-image-picture")</script></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="index.html">←Canvas Backend</a> <a class="pagenav" href="examples.html">Miscellaneous Examples→</a>
+            <a class="pagenav" href="loading-images.html">←Loading Images</a> <a class="pagenav" href="examples.html">Miscellaneous Examples→</a>
           </div>
         </div>
         <footer>
